# learn-python

./: .bandit  .cruft.json  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __main__.py  mkdocs.yml  pyproject.toml
.github/workflows/: cruft-update.yaml  main-updated.yaml  python-check.yaml  tests.yaml
docs/: README.md  contributing.md
src/: learn_python.py
src/function1/task1/: run.py  task.py
src/function1/task1/__tests__/: test_task.py
src/function1/task2/: run.py  task.py
src/function1/task2/__tests__/: test_task.py
src/function1/task3/: run.py  task.py
src/function1/task3/__tests__/: test_task.py
src/function1/task4/: run.py  task.py
src/function1/task4/__tests__/: test_task.py
src/immutableTypes/: 1.py
src/immutableTypes/task1/: run.py  task.py
src/immutableTypes/task1/__tests__/: test_task.py  test_task1.py
src/immutableTypes/task2/: run.py  task.py
src/immutableTypes/task2/__tests__/: test_task.py
src/immutableTypes/task3/: run.py  task.py
src/immutableTypes/task3/__tests__/: test_task.py
src/immutableTypes/task4/: run.py  task.py
src/immutableTypes/task4/__tests__/: test_task.py
src/immutableTypes/task5/: run.py  task.py
src/immutableTypes/task5/__tests__/: test_task.py
src/loopsAndConditions/task1/: run.py  task.py
src/loopsAndConditions/task1/__tests__/: test_task.py
src/loopsAndConditions/task2/: task.py
src/loopsAndConditions/task2/__tests__/: test_task.py
src/loopsAndConditions/task3/: task.py
src/loopsAndConditions/task3/__tests__/: test_task.py
src/loopsAndConditions/task4/: task.py
src/loopsAndConditions/task4/__tests__/: test_task.py
src/loopsAndConditions/task5/: run.py  task.py
src/loopsAndConditions/task5/__tests__/: test_task.py
tasks/: __init__.py  build.py  common.py  doc.py  env.py  git.py  secure.py  style.py  test.py
